# openGL

./: CMakeLists.txt  camera_class.h  geo_shader.h  main.cpp  mesh.h  model.h  shader_class.h
fs/: cubemap_reflection.fs  cubemap_refraction.fs  framebuffer.fs  fshader.fs  simpleTex.fs  skybox.fs
glad/include/glad/: glad.h
glad/src/: glad.c
vs/: cubemap_reflection.vs  explode.gs  explode.vs  framebuffer.vs  gshader.gs  skybox.vs  visualize_normal.gs  visualize_normal.vs  vshader.vs
